--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,6 +2,8 @@ extends base
 include _reviewCard
 
 block append head
+    script(src='https://cdn.maptiler.com/maptiler-sdk-js/v3.8.0/maptiler-sdk.umd.min.js')
+    link(href='https://cdn.maptiler.com/maptiler-sdk-js/v3.8.0/maptiler-sdk.css' rel='stylesheet' )
     //- script(src='/js/mapbox.js') 
 
 mixin overviewbox(label, text, icon)
