--- a/views/tour.pug
+++ b/views/tour.pug
@@ -2,11 +2,11 @@ extends base
 include _reviewCard
 
 block append head
+    //- //- script(src='/js/mapbox.js') 
     script(src='https://cdn.maptiler.com/maptiler-sdk-js/v3.8.0/maptiler-sdk.umd.min.js')
     link(href='https://cdn.maptiler.com/maptiler-sdk-js/v3.8.0/maptiler-sdk.css' rel='stylesheet' )
-    //- script(src='/js/mapbox.js') 
-    //- script(src='https://js.stripe.com/clover/stripe.js')
     script(src='https://js.stripe.com/v3/')
+    //- script(src='https://js.stripe.com/clover/stripe.js')
 
 mixin overviewbox(label, text, icon)
     .overview-box__detail
